# SoftRender

./: 学习计划.txt
CMakeTest/: CMakeLists.txt  main.cpp  main2.cpp
CMakeTest/funcs/: CMakeLists.txt  func.cpp
软光栅/lectureCodes/lectureCodes/lectureCodes02-GDI/: main.cpp
软光栅/lectureCodes/lectureCodes/lectureCodes02-GDI/global/: base.h
软光栅/lectureCodes/lectureCodes/lectureCodes02-GDI/gpu/: frameBuffer.h  gpu.cpp
软光栅/lectureCodes/lectureCodes/lectureCodes03-Lines/: main.cpp
软光栅/lectureCodes/lectureCodes/lectureCodes05-Triangles/: main.cpp
软光栅/lectureCodes/lectureCodes/lectureCodes06-Image/: main.cpp
软光栅/lectureCodes/lectureCodes/lectureCodes07-UV/: main.cpp
软光栅/lectureCodes/lectureCodes/lectureCodes08-Bilinear/: main.cpp
软光栅/lectureCodes/lectureCodes/lectureCodes09-Wrap/: main.cpp
软光栅/lectureCodes/lectureCodes/lectureCodes11-Transform/: main.cpp
软光栅/lectureCodes/lectureCodes/lectureCodes23-model/: main.cpp
